--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -6,7 +6,7 @@ license="${mod_license}"
 modId="${mod_id}" #mandatory
 version="${mod_version}" #mandatory
 displayName="${mod_name}" #mandatory
-updateJSONURL="https://github.com/iwaliner/Urushi-MOD-1.20.1/updates.json" #optional
+updateJSONURL="https://raw.githubusercontent.com/iwaliner/Urushi-MOD-1.20.1/main/updates.json" #optional
 #displayURL="https://change.me.to.your.mods.homepage.example.invalid/" #optional
 logoFile="logo.png" #optional
 #credits="" #optional
