--- a/build.gradle
+++ b/build.gradle
@@ -164,6 +164,8 @@ dependencies {
     runtimeOnly(  fg.deobf("curse.maven:tofucraftreload-317469:5394775"))
     runtimeOnly(  fg.deobf("curse.maven:effortless-building-302113:4979089"))
     runtimeOnly(  fg.deobf("curse.maven:mouse-tweaks-60089:5338457"))
+    runtimeOnly(  fg.deobf("curse.maven:jade-324717:5672013"))
+    runtimeOnly(  fg.deobf("curse.maven:crafttweaker-239197:5648765"))
 
 
     // https://mvnrepository.com/artifact/vazkii.patchouli/Patchouli
@@ -236,3 +238,4 @@ publishing {
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
 }
+
