finished making double slab

--- a/build.gradle
+++ b/build.gradle
@@ -95,7 +95,7 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
             property "mixin.env.remapRefMap", "true"
             arg "-mixin.config=urushi.mixins.json"
-            jvmArgs "-Xms4G", "-Xmx6G"
+            jvmArgs "-Xms4G", "-Xmx8G"
         }
 
         server {
@@ -107,7 +107,7 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
             property "mixin.env.remapRefMap", "true"
             arg "-mixin.config=urushi.mixins.json"
-            jvmArgs "-Xms4G", "-Xmx6G"
+            jvmArgs "-Xms4G", "-Xmx8G"
         }
 
         // This run config launches GameTestServer and runs all registered gametests, then exits.
@@ -158,16 +158,15 @@ dependencies {
 //文字列Aは、CurseForgeの各MODページのURL内に入っている、mod名に限りなく近い文字列。
 //数値Bは、CurseForgeの各MODページの右側に表示されている「About Project」内の「Project ID」で記されている数値。
 //数値Cは、CurseForgeにて使いたいMODの「Files」タブを開き、使いたい特定のバージョンの下線付き文字部分をクリックしてそのバージョンが詳しく書かれているページに飛び、そこのページのURLの末尾に書かれている数値
-    // runtimeOnly(  fg.deobf("curse.maven:mekanism-268560:4385637"))
 
-    //runtimeOnly(  fg.deobf("curse.maven:jei-238222:5101366"))
+    runtimeOnly(  fg.deobf("curse.maven:jei-238222:5101366"))
     compileOnly(  fg.deobf("curse.maven:jade-324717:5672013"))
     compileOnly(  fg.deobf("curse.maven:jei-238222:5101366"))
-    //runtimeOnly(  fg.deobf("curse.maven:tofucraftreload-317469:5394775"))
-    //runtimeOnly(  fg.deobf("curse.maven:effortless-building-302113:4979089"))
+    runtimeOnly(  fg.deobf("curse.maven:tofucraftreload-317469:5394775"))
+    runtimeOnly(  fg.deobf("curse.maven:effortless-building-302113:4979089"))
     runtimeOnly(  fg.deobf("curse.maven:mouse-tweaks-60089:5338457"))
-    //runtimeOnly(  fg.deobf("curse.maven:jade-324717:5672013"))
-    //runtimeOnly(  fg.deobf("curse.maven:crafttweaker-239197:5648765"))
+    runtimeOnly(  fg.deobf("curse.maven:jade-324717:5672013"))
+    runtimeOnly(  fg.deobf("curse.maven:crafttweaker-239197:5648765"))
 
 
     // https://mvnrepository.com/artifact/vazkii.patchouli/Patchouli
