--- a/build.gradle
+++ b/build.gradle
@@ -169,6 +169,7 @@ dependencies {
     runtimeOnly(  fg.deobf("curse.maven:mouse-tweaks-60089:5338457"))
     runtimeOnly(  fg.deobf("curse.maven:jade-324717:5672013"))
     runtimeOnly(  fg.deobf("curse.maven:crafttweaker-239197:5648765"))
+    runtimeOnly(  fg.deobf("curse.maven:spark-361579:4587309"))
 
 
     // https://mvnrepository.com/artifact/vazkii.patchouli/Patchouli
