--- a/gradle.properties
+++ b/gradle.properties
@@ -38,6 +38,7 @@ mapping_channel=official
 mapping_version=1.20.1
 
 
+
 ## Mod Properties
 
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
@@ -48,7 +49,7 @@ mod_name=Urushi
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT License
 # The mod version. See https://semver.org/
-mod_version=1.20.1-6.5.2-preRelease2
+mod_version=1.20.1-6.5.2
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
