--- a/build.gradle
+++ b/build.gradle
@@ -170,7 +170,8 @@ dependencies {
     runtimeOnly(  fg.deobf("curse.maven:jade-324717:5672013"))
     runtimeOnly(  fg.deobf("curse.maven:crafttweaker-239197:5648765"))
     runtimeOnly(  fg.deobf("curse.maven:spark-361579:4587309"))
-
+   // compileOnly(  fg.deobf("curse.maven:supplementaries-412082:6889003"))
+    //runtimeOnly(  fg.deobf("curse.maven:supplementaries-412082:6889003"))
 
     // https://mvnrepository.com/artifact/vazkii.patchouli/Patchouli
     compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.20.1-84.1-FORGE:api")
