--- a/build.gradle
+++ b/build.gradle
@@ -172,6 +172,10 @@ dependencies {
     runtimeOnly(  fg.deobf("curse.maven:spark-361579:4587309"))
     runtimeOnly(  fg.deobf("curse.maven:bookshelf-228525:5423987"))
     runtimeOnly(  fg.deobf("curse.maven:botany-pots-353928:6348581"))
+
+    runtimeOnly(  fg.deobf("curse.maven:rhino-416294:5655836"))
+    runtimeOnly(  fg.deobf("curse.maven:architectury-api-419699:5137938"))
+    runtimeOnly(  fg.deobf("curse.maven:kubejs-238086:5853326"))
    // compileOnly(  fg.deobf("curse.maven:supplementaries-412082:6889003"))
     //runtimeOnly(  fg.deobf("curse.maven:supplementaries-412082:6889003"))
 
@@ -248,4 +252,5 @@ publishing {
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
 }
+
 
